Changelog
=========

1.1 (unreleased)
----------------

* Fix a bug when the ``start`` value is higher than the number of
  element in the batch in the regular batch.

1.0 (2011-11-07)
----------------

* Add a new batch component, ``DateBatch``, which is able to browser
  period of years or months.

* ``batch`` is renamed into ``Batch``. Methods have been renamed to
  follow pep8 recommandations (i.e. ``batchLen`` into ``batch_length``).

* Template have been reviewed: values are accessible via the template
  variable ``batch`` insted of directly. This fix an issue of
  compatiblity with Chameleon, where ``next`` could not be defined
  (that's a Python built-in).

0.7 (2010-10-05)
----------------

* Add a __len__ method do a batch object, which returns the number of
  objects viewable via this current batch. Like this, it can be used
  with tal:condition in templates.

* An option keep_form_data on the view prevent to include posted form
  data in generated links (sometime you want them, some other you
  don't).

0.6 (2010-07-15)
----------------

* Generated batch links can include other parameters in the link. That
  let you batch form results for instance.


0.5 (2009-11-17)
----------------

* Batching views have two new properties: ``first`` and ``last`` which
  gives links to the first and last batch.

0.4.1 (2009-10-16)
------------------

* Corrected the broken distribution that was missing the i18n folder.

0.4 (2009-10-16)
----------------

.. note::

   This release is incompatible with previous ones. You are recomanded
   to review and adapt your code in order to use it.

* Added README.txt as a doctest [trollfot]
* The rendering is made by a IPageTemplate component, not longer by
  the Batching itself. [trollfot]
* We no longer use the IBatchedContent. It has been removed. [trollfot]
* `zeam.utils.batch` is now fully grokked. [trollfot]
* batchView has been renamed Batching. [trollfot]