@@ -15,7 +15,8 @@ class DateBatch(ActiveBatch):
 
     def __init__(
         self, collection,
-        start=None, count=BATCH_MONTH, name='', request=None, factory=None):
+        start=None, count=BATCH_MONTH, name='', request=None, factory=None,
+        min=None, max=None):
         if request is not None:
             key = 'bstart'
             if name:
@@ -27,13 +28,31 @@ class DateBatch(ActiveBatch):
                     pass
         if start is None:
             start = datetime.now()
+        self.min = min
+        self.max = max
         super(DateBatch, self).__init__(
             collection,
             start=start, count=count, name=name,
             request=request, factory=factory)
 
     def all(self):
-        for month in range(1, 13):
+        start = 1
+        if self.min is not None:
+            if self.min.year == self.start.year:
+                # We are on the starting year.
+                start = self.min.month
+            elif self.min.year > self.start.year:
+                # We are before the starting year
+                start = 13
+        end = 13
+        if self.max is not None:
+            if self.max.year == self.start.year:
+                # We are on the ending year
+                end = self.max.month + 1
+            elif self.max.year < self.start.year:
+                # We are after the ending year
+                end = 1
+        for month in range(start, end):
             yield datetime(self.start.year, month, 1)
 
     def batch_length(self):
@@ -41,8 +60,20 @@ class DateBatch(ActiveBatch):
 
     @property
     def previous(self):
+        if self.min is not None and self.min.year >= self.start.year:
+            # We are before the minimal year.
+            return None
+        if self.max is not None and self.max.year < self.start.year:
+            # We are after the maximal year.
+            return None
         return datetime(self.start.year - 1, 12, 1)
 
     @property
     def next(self):
+        if self.max is not None and self.max.year <= self.start.year:
+            # We are after the maximal year.
+            return None
+        if self.min is not None and self.min.year > self.start.year:
+            # We are before the minimal year.
+            return None
         return datetime(self.start.year + 1, 1, 1)
