@@ -2,7 +2,8 @@
      tal:define="batch_previous batch/batch_previous;
                  batch_next batch/batch_next">
   <a href="#" class="previous"
-     tal:attributes="href batch/batch_previous/url">
+     tal:attributes="href batch_previous/url"
+     tal:condition="batch_previous">
     &lt; <tal:year tal:replace="batch_previous/year" />
   </a>
   <tal:repeat tal:repeat="item batch/batch">
@@ -13,7 +14,8 @@
     </a>
   </tal:repeat>
   <a href="#" class="next"
-     tal:attributes="href batch/batch_next/url">
+     tal:attributes="href batch_next/url"
+     tal:condition="batch_next">
     <tal:year tal:replace="batch_next/year" /> &gt;
   </a>
 </div>
